antlr4_generated/loxParser.cpp

// Generated from lox.g4 by ANTLR 4.9


#include "loxListener.h"

#include "loxParser.h"


using namespace antlrcpp;
using namespace antlr4;

loxParser::loxParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

loxParser::~loxParser() {
  delete _interpreter;
}

std::string loxParser::getGrammarFileName() const {
  return "lox.g4";
}

const std::vector<std::string>& loxParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& loxParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

loxParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* loxParser::ProgramContext::EOF() {
  return getToken(loxParser::EOF, 0);
}

std::vector<loxParser::DeclarationContext *> loxParser::ProgramContext::declaration() {
  return getRuleContexts<loxParser::DeclarationContext>();
}

loxParser::DeclarationContext* loxParser::ProgramContext::declaration(size_t i) {
  return getRuleContext<loxParser::DeclarationContext>(i);
}


size_t loxParser::ProgramContext::getRuleIndex() const {
  return loxParser::RuleProgram;
}

void loxParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void loxParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

loxParser::ProgramContext* loxParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, loxParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(57);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << loxParser::T__0)
      | (1ULL << loxParser::T__2)
      | (1ULL << loxParser::T__4)
      | (1ULL << loxParser::T__5)
      | (1ULL << loxParser::T__8)
      | (1ULL << loxParser::T__9)
      | (1ULL << loxParser::T__11)
      | (1ULL << loxParser::T__13)
      | (1ULL << loxParser::T__14)
      | (1ULL << loxParser::T__15)
      | (1ULL << loxParser::T__24)
      | (1ULL << loxParser::T__28)
      | (1ULL << loxParser::T__29)
      | (1ULL << loxParser::T__30)
      | (1ULL << loxParser::T__31)
      | (1ULL << loxParser::T__32)
      | (1ULL << loxParser::T__33)
      | (1ULL << loxParser::NUMBER)
      | (1ULL << loxParser::STRING)
      | (1ULL << loxParser::IDENTIFIER))) != 0)) {
      setState(54);
      declaration();
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(60);
    match(loxParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeclarationContext ------------------------------------------------------------------

loxParser::DeclarationContext::DeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ClassDeclContext* loxParser::DeclarationContext::classDecl() {
  return getRuleContext<loxParser::ClassDeclContext>(0);
}

loxParser::FunDeclContext* loxParser::DeclarationContext::funDecl() {
  return getRuleContext<loxParser::FunDeclContext>(0);
}

loxParser::VarDeclContext* loxParser::DeclarationContext::varDecl() {
  return getRuleContext<loxParser::VarDeclContext>(0);
}

loxParser::StatementContext* loxParser::DeclarationContext::statement() {
  return getRuleContext<loxParser::StatementContext>(0);
}


size_t loxParser::DeclarationContext::getRuleIndex() const {
  return loxParser::RuleDeclaration;
}

void loxParser::DeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDeclaration(this);
}

void loxParser::DeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDeclaration(this);
}

loxParser::DeclarationContext* loxParser::declaration() {
  DeclarationContext *_localctx = _tracker.createInstance<DeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, loxParser::RuleDeclaration);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(66);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case loxParser::T__0: {
        enterOuterAlt(_localctx, 1);
        setState(62);
        classDecl();
        break;
      }

      case loxParser::T__4: {
        enterOuterAlt(_localctx, 2);
        setState(63);
        funDecl();
        break;
      }

      case loxParser::T__5: {
        enterOuterAlt(_localctx, 3);
        setState(64);
        varDecl();
        break;
      }

      case loxParser::T__2:
      case loxParser::T__8:
      case loxParser::T__9:
      case loxParser::T__11:
      case loxParser::T__13:
      case loxParser::T__14:
      case loxParser::T__15:
      case loxParser::T__24:
      case loxParser::T__28:
      case loxParser::T__29:
      case loxParser::T__30:
      case loxParser::T__31:
      case loxParser::T__32:
      case loxParser::T__33:
      case loxParser::NUMBER:
      case loxParser::STRING:
      case loxParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 4);
        setState(65);
        statement();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ClassDeclContext ------------------------------------------------------------------

loxParser::ClassDeclContext::ClassDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> loxParser::ClassDeclContext::IDENTIFIER() {
  return getTokens(loxParser::IDENTIFIER);
}

tree::TerminalNode* loxParser::ClassDeclContext::IDENTIFIER(size_t i) {
  return getToken(loxParser::IDENTIFIER, i);
}

std::vector<loxParser::FunctionContext *> loxParser::ClassDeclContext::function() {
  return getRuleContexts<loxParser::FunctionContext>();
}

loxParser::FunctionContext* loxParser::ClassDeclContext::function(size_t i) {
  return getRuleContext<loxParser::FunctionContext>(i);
}


size_t loxParser::ClassDeclContext::getRuleIndex() const {
  return loxParser::RuleClassDecl;
}

void loxParser::ClassDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterClassDecl(this);
}

void loxParser::ClassDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitClassDecl(this);
}

loxParser::ClassDeclContext* loxParser::classDecl() {
  ClassDeclContext *_localctx = _tracker.createInstance<ClassDeclContext>(_ctx, getState());
  enterRule(_localctx, 4, loxParser::RuleClassDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    match(loxParser::T__0);
    setState(69);
    match(loxParser::IDENTIFIER);
    setState(72);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == loxParser::T__1) {
      setState(70);
      match(loxParser::T__1);
      setState(71);
      match(loxParser::IDENTIFIER);
    }
    setState(74);
    match(loxParser::T__2);
    setState(78);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == loxParser::IDENTIFIER) {
      setState(75);
      function();
      setState(80);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(81);
    match(loxParser::T__3);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunDeclContext ------------------------------------------------------------------

loxParser::FunDeclContext::FunDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::FunctionContext* loxParser::FunDeclContext::function() {
  return getRuleContext<loxParser::FunctionContext>(0);
}


size_t loxParser::FunDeclContext::getRuleIndex() const {
  return loxParser::RuleFunDecl;
}

void loxParser::FunDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunDecl(this);
}

void loxParser::FunDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunDecl(this);
}

loxParser::FunDeclContext* loxParser::funDecl() {
  FunDeclContext *_localctx = _tracker.createInstance<FunDeclContext>(_ctx, getState());
  enterRule(_localctx, 6, loxParser::RuleFunDecl);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(83);
    match(loxParser::T__4);
    setState(84);
    function();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- VarDeclContext ------------------------------------------------------------------

loxParser::VarDeclContext::VarDeclContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* loxParser::VarDeclContext::IDENTIFIER() {
  return getToken(loxParser::IDENTIFIER, 0);
}

loxParser::ExpressionContext* loxParser::VarDeclContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}


size_t loxParser::VarDeclContext::getRuleIndex() const {
  return loxParser::RuleVarDecl;
}

void loxParser::VarDeclContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterVarDecl(this);
}

void loxParser::VarDeclContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitVarDecl(this);
}

loxParser::VarDeclContext* loxParser::varDecl() {
  VarDeclContext *_localctx = _tracker.createInstance<VarDeclContext>(_ctx, getState());
  enterRule(_localctx, 8, loxParser::RuleVarDecl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(86);
    match(loxParser::T__5);
    setState(87);
    match(loxParser::IDENTIFIER);
    setState(90);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == loxParser::T__6) {
      setState(88);
      match(loxParser::T__6);
      setState(89);
      expression();
    }
    setState(92);
    match(loxParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

loxParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExprStmtContext* loxParser::StatementContext::exprStmt() {
  return getRuleContext<loxParser::ExprStmtContext>(0);
}

loxParser::ForStmtContext* loxParser::StatementContext::forStmt() {
  return getRuleContext<loxParser::ForStmtContext>(0);
}

loxParser::IfStmtContext* loxParser::StatementContext::ifStmt() {
  return getRuleContext<loxParser::IfStmtContext>(0);
}

loxParser::PrintStmtContext* loxParser::StatementContext::printStmt() {
  return getRuleContext<loxParser::PrintStmtContext>(0);
}

loxParser::ReturnStmtContext* loxParser::StatementContext::returnStmt() {
  return getRuleContext<loxParser::ReturnStmtContext>(0);
}

loxParser::WhileStmtContext* loxParser::StatementContext::whileStmt() {
  return getRuleContext<loxParser::WhileStmtContext>(0);
}

loxParser::BlockContext* loxParser::StatementContext::block() {
  return getRuleContext<loxParser::BlockContext>(0);
}


size_t loxParser::StatementContext::getRuleIndex() const {
  return loxParser::RuleStatement;
}

void loxParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void loxParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

loxParser::StatementContext* loxParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 10, loxParser::RuleStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(101);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case loxParser::T__9:
      case loxParser::T__24:
      case loxParser::T__28:
      case loxParser::T__29:
      case loxParser::T__30:
      case loxParser::T__31:
      case loxParser::T__32:
      case loxParser::T__33:
      case loxParser::NUMBER:
      case loxParser::STRING:
      case loxParser::IDENTIFIER: {
        enterOuterAlt(_localctx, 1);
        setState(94);
        exprStmt();
        break;
      }

      case loxParser::T__8: {
        enterOuterAlt(_localctx, 2);
        setState(95);
        forStmt();
        break;
      }

      case loxParser::T__11: {
        enterOuterAlt(_localctx, 3);
        setState(96);
        ifStmt();
        break;
      }

      case loxParser::T__13: {
        enterOuterAlt(_localctx, 4);
        setState(97);
        printStmt();
        break;
      }

      case loxParser::T__14: {
        enterOuterAlt(_localctx, 5);
        setState(98);
        returnStmt();
        break;
      }

      case loxParser::T__15: {
        enterOuterAlt(_localctx, 6);
        setState(99);
        whileStmt();
        break;
      }

      case loxParser::T__2: {
        enterOuterAlt(_localctx, 7);
        setState(100);
        block();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprStmtContext ------------------------------------------------------------------

loxParser::ExprStmtContext::ExprStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExpressionContext* loxParser::ExprStmtContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}


size_t loxParser::ExprStmtContext::getRuleIndex() const {
  return loxParser::RuleExprStmt;
}

void loxParser::ExprStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExprStmt(this);
}

void loxParser::ExprStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExprStmt(this);
}

loxParser::ExprStmtContext* loxParser::exprStmt() {
  ExprStmtContext *_localctx = _tracker.createInstance<ExprStmtContext>(_ctx, getState());
  enterRule(_localctx, 12, loxParser::RuleExprStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    expression();
    setState(104);
    match(loxParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ForStmtContext ------------------------------------------------------------------

loxParser::ForStmtContext::ForStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::StatementContext* loxParser::ForStmtContext::statement() {
  return getRuleContext<loxParser::StatementContext>(0);
}

loxParser::VarDeclContext* loxParser::ForStmtContext::varDecl() {
  return getRuleContext<loxParser::VarDeclContext>(0);
}

loxParser::ExprStmtContext* loxParser::ForStmtContext::exprStmt() {
  return getRuleContext<loxParser::ExprStmtContext>(0);
}

std::vector<loxParser::ExpressionContext *> loxParser::ForStmtContext::expression() {
  return getRuleContexts<loxParser::ExpressionContext>();
}

loxParser::ExpressionContext* loxParser::ForStmtContext::expression(size_t i) {
  return getRuleContext<loxParser::ExpressionContext>(i);
}


size_t loxParser::ForStmtContext::getRuleIndex() const {
  return loxParser::RuleForStmt;
}

void loxParser::ForStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterForStmt(this);
}

void loxParser::ForStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitForStmt(this);
}

loxParser::ForStmtContext* loxParser::forStmt() {
  ForStmtContext *_localctx = _tracker.createInstance<ForStmtContext>(_ctx, getState());
  enterRule(_localctx, 14, loxParser::RuleForStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(106);
    match(loxParser::T__8);
    setState(107);
    match(loxParser::T__9);
    setState(111);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case loxParser::T__5: {
        setState(108);
        varDecl();
        break;
      }

      case loxParser::T__9:
      case loxParser::T__24:
      case loxParser::T__28:
      case loxParser::T__29:
      case loxParser::T__30:
      case loxParser::T__31:
      case loxParser::T__32:
      case loxParser::T__33:
      case loxParser::NUMBER:
      case loxParser::STRING:
      case loxParser::IDENTIFIER: {
        setState(109);
        exprStmt();
        break;
      }

      case loxParser::T__7: {
        setState(110);
        match(loxParser::T__7);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    setState(114);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << loxParser::T__9)
      | (1ULL << loxParser::T__24)
      | (1ULL << loxParser::T__28)
      | (1ULL << loxParser::T__29)
      | (1ULL << loxParser::T__30)
      | (1ULL << loxParser::T__31)
      | (1ULL << loxParser::T__32)
      | (1ULL << loxParser::T__33)
      | (1ULL << loxParser::NUMBER)
      | (1ULL << loxParser::STRING)
      | (1ULL << loxParser::IDENTIFIER))) != 0)) {
      setState(113);
      expression();
    }
    setState(116);
    match(loxParser::T__7);
    setState(118);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << loxParser::T__9)
      | (1ULL << loxParser::T__24)
      | (1ULL << loxParser::T__28)
      | (1ULL << loxParser::T__29)
      | (1ULL << loxParser::T__30)
      | (1ULL << loxParser::T__31)
      | (1ULL << loxParser::T__32)
      | (1ULL << loxParser::T__33)
      | (1ULL << loxParser::NUMBER)
      | (1ULL << loxParser::STRING)
      | (1ULL << loxParser::IDENTIFIER))) != 0)) {
      setState(117);
      expression();
    }
    setState(120);
    match(loxParser::T__10);
    setState(121);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- IfStmtContext ------------------------------------------------------------------

loxParser::IfStmtContext::IfStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExpressionContext* loxParser::IfStmtContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}

std::vector<loxParser::StatementContext *> loxParser::IfStmtContext::statement() {
  return getRuleContexts<loxParser::StatementContext>();
}

loxParser::StatementContext* loxParser::IfStmtContext::statement(size_t i) {
  return getRuleContext<loxParser::StatementContext>(i);
}


size_t loxParser::IfStmtContext::getRuleIndex() const {
  return loxParser::RuleIfStmt;
}

void loxParser::IfStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterIfStmt(this);
}

void loxParser::IfStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitIfStmt(this);
}

loxParser::IfStmtContext* loxParser::ifStmt() {
  IfStmtContext *_localctx = _tracker.createInstance<IfStmtContext>(_ctx, getState());
  enterRule(_localctx, 16, loxParser::RuleIfStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(123);
    match(loxParser::T__11);
    setState(124);
    match(loxParser::T__9);
    setState(125);
    expression();
    setState(126);
    match(loxParser::T__10);
    setState(127);
    statement();
    setState(130);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 9, _ctx)) {
    case 1: {
      setState(128);
      match(loxParser::T__12);
      setState(129);
      statement();
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- PrintStmtContext ------------------------------------------------------------------

loxParser::PrintStmtContext::PrintStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExpressionContext* loxParser::PrintStmtContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}


size_t loxParser::PrintStmtContext::getRuleIndex() const {
  return loxParser::RulePrintStmt;
}

void loxParser::PrintStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterPrintStmt(this);
}

void loxParser::PrintStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitPrintStmt(this);
}

loxParser::PrintStmtContext* loxParser::printStmt() {
  PrintStmtContext *_localctx = _tracker.createInstance<PrintStmtContext>(_ctx, getState());
  enterRule(_localctx, 18, loxParser::RulePrintStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(132);
    match(loxParser::T__13);
    setState(133);
    expression();
    setState(134);
    match(loxParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ReturnStmtContext ------------------------------------------------------------------

loxParser::ReturnStmtContext::ReturnStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExpressionContext* loxParser::ReturnStmtContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}


size_t loxParser::ReturnStmtContext::getRuleIndex() const {
  return loxParser::RuleReturnStmt;
}

void loxParser::ReturnStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterReturnStmt(this);
}

void loxParser::ReturnStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitReturnStmt(this);
}

loxParser::ReturnStmtContext* loxParser::returnStmt() {
  ReturnStmtContext *_localctx = _tracker.createInstance<ReturnStmtContext>(_ctx, getState());
  enterRule(_localctx, 20, loxParser::RuleReturnStmt);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(136);
    match(loxParser::T__14);
    setState(138);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << loxParser::T__9)
      | (1ULL << loxParser::T__24)
      | (1ULL << loxParser::T__28)
      | (1ULL << loxParser::T__29)
      | (1ULL << loxParser::T__30)
      | (1ULL << loxParser::T__31)
      | (1ULL << loxParser::T__32)
      | (1ULL << loxParser::T__33)
      | (1ULL << loxParser::NUMBER)
      | (1ULL << loxParser::STRING)
      | (1ULL << loxParser::IDENTIFIER))) != 0)) {
      setState(137);
      expression();
    }
    setState(140);
    match(loxParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhileStmtContext ------------------------------------------------------------------

loxParser::WhileStmtContext::WhileStmtContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

loxParser::ExpressionContext* loxParser::WhileStmtContext::expression() {
  return getRuleContext<loxParser::ExpressionContext>(0);
}

loxParser::StatementContext* loxParser::WhileStmtContext::statement() {
  return getRuleContext<loxParser::StatementContext>(0);
}


size_t loxParser::WhileStmtContext::getRuleIndex() const {
  return loxParser::RuleWhileStmt;
}

void loxParser::WhileStmtContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterWhileStmt(this);
}

void loxParser::WhileStmtContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitWhileStmt(this);
}

loxParser::WhileStmtContext* loxParser::whileStmt() {
  WhileStmtContext *_localctx = _tracker.createInstance<WhileStmtContext>(_ctx, getState());
  enterRule(_localctx, 22, loxParser::RuleWhileStmt);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(142);
    match(loxParser::T__15);
    setState(143);
    match(loxParser::T__9);
    setState(144);
    expression();
    setState(145);
    match(loxParser::T__10);
    setState(146);
    statement();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

loxParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<loxParser::DeclarationContext *> loxParser::BlockContext::declaration() {
  return getRuleContexts<loxParser::DeclarationContext>();
}

loxParser::DeclarationContext* loxParser::BlockContext::declaration(size_t i) {
  return getRuleContext<loxParser::DeclarationContext>(i);
}


size_t loxParser::BlockContext::getRuleIndex() const {
  return loxParser::RuleBlock;
}

void loxParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void loxParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<loxListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}

loxParser::BlockContext* loxParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 24, loxParser::RuleBlock);
  size_t _la = 0;
